force-app/main/default/objects/Lead/fields/Aktiver_i_form_af_v_rdipapirer_el_andet__c.field-meta.xml
<CustomField>
    <fullName>Aktiver_i_form_af_v_rdipapirer_el_andet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aktiver i form af værdipapirer el. andet</label>
    <type>Checkbox</type>
</CustomField>