force-app/main/default/objects/Lead/fields/All__c.field-meta.xml
<CustomField>
    <fullName>All__c</fullName>
    <label>Contact Info History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>