force-app/main/default/objects/Lead/fields/Appointment_Being_Created__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Being_Created__c</fullName>
    <label>Appointment Being Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Being created</fullName>
            </value>
            <value>
                <fullName>Has been created</fullName>
            </value>
            <value>
                <fullName>Awaiting reminder time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>