force-app/main/default/objects/Lead/fields/Arbejdssituation__c.field-meta.xml
<CustomField>
    <fullName>Arbejdssituation__c</fullName>
    <label>Arbejdssituation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuldtid på arbejdsmarkedet</fullName>
            </value>
            <value>
                <fullName>Selvstændig</fullName>
            </value>
            <value>
                <fullName>Pensioneret</fullName>
            </value>
            <value>
                <fullName>Ledig</fullName>
            </value>
            <value>
                <fullName>Sygemeldt</fullName>
            </value>
            <value>
                <fullName>Andet</fullName>
            </value>
            <value>
                <fullName>På barsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>