force-app/main/default/objects/Lead/fields/Area_Income__c.field-meta.xml
<CustomField>
    <fullName>Area_Income__c</fullName>
    <label>Area Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>