force-app/main/default/objects/Lead/fields/Area_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Area_Suggestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Automatically generated suggestion for a lecture in the same area (based on Zip Code), as where the Lead originally booked.</inlineHelpText>
    <label>Area Suggestion</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Area Suggestion)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>