force-app/main/default/objects/Lead/fields/Area_Suggestion_Booking_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Area_Suggestion_Booking_Percentage__c</fullName>
    <formula>Area_Suggestion__r.Booking_Percentage__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Suggestion Booking Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>