force-app/main/default/objects/Lead/fields/Area_Suggestion_Booking_URL__c.field-meta.xml
<CustomField>
    <fullName>Area_Suggestion_Booking_URL__c</fullName>
    <formula>Area_Suggestion__r.Event_URL_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Suggestion Booking URL</label>
    <type>Text</type>
</CustomField>