force-app/main/default/objects/Lead/fields/Area_Suggestion_Date__c.field-meta.xml
<CustomField>
    <fullName>Area_Suggestion_Date__c</fullName>
    <formula>Area_Suggestion__r.Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Suggestion (Date)</label>
    <type>Date</type>
</CustomField>