force-app/main/default/objects/Lead/fields/Area_Suggestion_Status__c.field-meta.xml
<CustomField>
    <fullName>Area_Suggestion_Status__c</fullName>
    <formula>TEXT( Area_Suggestion__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Suggestion Status</label>
    <type>Text</type>
</CustomField>