force-app/main/default/objects/Lead/fields/Aros_Api_Response__c.field-meta.xml
<CustomField>
    <fullName>Aros_Api_Response__c</fullName>
    <label>Aros Api Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>