force-app/main/default/objects/Lead/fields/Aros_Lead_Generation_Time__c.field-meta.xml
<CustomField>
    <fullName>Aros_Lead_Generation_Time__c</fullName>
    <label>Aros Lead Generation Time</label>
    <type>DateTime</type>
</CustomField>