force-app/main/default/objects/Lead/fields/Besked_til_r_dgiver__c.field-meta.xml
<CustomField>
    <fullName>Besked_til_r_dgiver__c</fullName>
    <label>Besked til rådgiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>