force-app/main/default/objects/Lead/fields/Beslutninger_ved_sygdom_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Beslutninger_ved_sygdom_Calendly__c</fullName>
    <label>Beslutninger ved sygdom? (Calendly)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enter value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>