force-app/main/default/objects/Lead/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <label>Fødselsdag</label>
    <type>Date</type>
</CustomField>