force-app/main/default/objects/Lead/fields/Birthday_txt__c.field-meta.xml
<CustomField>
    <fullName>Birthday_txt__c</fullName>
    <label>Fødselsdag_txt</label>
    <length>15</length>
    <type>Text</type>
</CustomField>