force-app/main/default/objects/Lead/fields/Bolig_type__c.field-meta.xml
<CustomField>
    <fullName>Bolig_type__c</fullName>
    <description>Hvilken type bolig har klienten</description>
    <label>Boligtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flerfamiljshus</fullName>
            </value>
            <value>
                <fullName>Friliggande</fullName>
            </value>
            <value>
                <fullName>Kedjehus</fullName>
            </value>
            <value>
                <fullName>Radhus</fullName>
            </value>
            <value>
                <fullName>Övriga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>