force-app/main/default/objects/Lead/fields/Booked_Meeting_via_Hubhus__c.field-meta.xml
<CustomField>
    <fullName>Booked_Meeting_via_Hubhus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booked Meeting via Hubhus</label>
    <type>Checkbox</type>
</CustomField>