force-app/main/default/objects/Lead/fields/Booker_navn__c.field-meta.xml
<CustomField>
    <fullName>Booker_navn__c</fullName>
    <label>Booker navn</label>
    <length>200</length>
    <type>Text</type>
</CustomField>