force-app/main/default/objects/Lead/fields/Booker_navn_alias__c.field-meta.xml
<CustomField>
    <fullName>Booker_navn_alias__c</fullName>
    <label>Booker navn alias</label>
    <type>TextArea</type>
</CustomField>