force-app/main/default/objects/Lead/fields/Booking_Action__c.field-meta.xml
<CustomField>
    <fullName>Booking_Action__c</fullName>
    <label>Booking Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>