force-app/main/default/objects/Lead/fields/booking_cancellation_method__c.field-meta.xml
<CustomField>
    <fullName>booking_cancellation_method__c</fullName>
    <description>This field indicates how the lead cancelled their booking for a lecture. If it is empty, the booking is not cancelled.</description>
    <label>Booking Cancellation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email to support</fullName>
            </value>
            <value>
                <fullName>Billetto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>