force-app/main/default/objects/Lead/fields/Booking_cancelled__c.field-meta.xml
<CustomField>
    <fullName>Booking_cancelled__c</fullName>
    <label>Booking cancelled?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>