force-app/main/default/objects/Lead/fields/Booking_date_time__c.field-meta.xml
<CustomField>
    <fullName>Booking_date_time__c</fullName>
    <label>Booking date/time</label>
    <type>DateTime</type>
</CustomField>