force-app/main/default/objects/Lead/fields/Booking_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status_Formula__c</fullName>
    <formula>IF(
    ISPICKVAL(UTM_Term__c, &quot;Pre-booking&quot;), 
    &quot;Opt-in&quot;,
    IF(
        OR(Tickets_in_order__c = 0, ISBLANK(Tickets_in_order__c)),
        &quot;No booking&quot;,
        IF(
            Remaining_Tickets__c = 0,
            &quot;Cancelled&quot;,
            IF(
                Remaining_Tickets__c &gt;= 1,
                &quot;Booked&quot;,
                &quot;&quot;
            )
        )
    )
)</formula>
    <inlineHelpText>Automatically sets &quot;Booked&quot; if Remaining Tickets is 1 or greater // Automatically sets &quot;Cancelled&quot; if its 0. If there is no number, leaves field empty</inlineHelpText>
    <label>Booking Status</label>
    <type>Text</type>
</CustomField>