force-app/main/default/objects/Lead/fields/Bor_du_til_leje_eller_ejer_du__c.field-meta.xml
<CustomField>
    <fullName>Bor_du_til_leje_eller_ejer_du__c</fullName>
    <label>Bor du til leje eller ejer du?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leje</fullName>
            </value>
            <value>
                <fullName>Ejer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>