force-app/main/default/objects/Lead/fields/Calendly_Answer_3__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Answer_3__c</fullName>
    <label>Calendly Answer #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>