force-app/main/default/objects/Lead/fields/Calendly_Booking_Note_Answer__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Booking_Note_Answer__c</fullName>
    <label>Calendly Booking Note Answer</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>