force-app/main/default/objects/Lead/fields/Calendly_Booking_Note_Question__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Booking_Note_Question__c</fullName>
    <label>Calendly Booking Note Question</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notér her, hvis kunde har nævnt noget specifikt, de gerne vil tale om.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>