force-app/main/default/objects/Lead/fields/Calendly_Booking_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Booking_Picklist__c</fullName>
    <inlineHelpText>This field will show whatever was picked in the picklist, during the booking of a Calendly Meeting. The field &quot;Calendly Booking Picklist Question&quot; will be dynamically populated with whatever the question was, for the given booking.</inlineHelpText>
    <label>Calendly Booking Picklist Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Testamente</fullName>
            </value>
            <value>
                <fullName>Fremtidsfuldmagt</fullName>
            </value>
            <value>
                <fullName>Begge dele</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>