force-app/main/default/objects/Lead/fields/Calendly_Booking_Picklist_Question__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Booking_Picklist_Question__c</fullName>
    <inlineHelpText>This field is dynamically populated, based on the question the customer answered during booking. This field contains the question. The answer is show in the field &quot;Calendly Booking Picklist Selection&quot;</inlineHelpText>
    <label>Calendly Booking Picklist Question</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hvad er du interesseret i?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>