force-app/main/default/objects/Lead/fields/Calendly_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Event_ID__c</fullName>
    <label>Calendly Event ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>