force-app/main/default/objects/Lead/fields/Calendly_Lecture_Booking_Time__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Lecture_Booking_Time__c</fullName>
    <label>Calendly Lecture Booking Time</label>
    <type>DateTime</type>
</CustomField>