force-app/main/default/objects/Lead/fields/Calendly_Lecture_Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Lecture_Meeting_Booked__c</fullName>
    <formula>NOT(ISBLANK(Calendly_Lecture_Meeting_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendly Lecture Meeting Booked</label>
    <type>Checkbox</type>
</CustomField>