force-app/main/default/objects/Lead/fields/Calendly_Meeting_Start__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Meeting_Start__c</fullName>
    <formula>CalendlyAction__r.Calendly__EventStartTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendly Meeting Start</label>
    <type>DateTime</type>
</CustomField>