force-app/main/default/objects/Lead/fields/Calendly_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Question_2__c</fullName>
    <label>Calendly Question #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>