force-app/main/default/objects/Lead/fields/Calendly_Question_3__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Question_3__c</fullName>
    <label>Calendly Question #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>