force-app/main/default/objects/Lead/fields/Call_After_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Call_After_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call After Business Hours</label>
    <type>Checkbox</type>
</CustomField>