force-app/main/default/objects/Lead/fields/Call_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Call_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Campaign</label>
    <referenceTo>telegenta__Campaign__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>