force-app/main/default/objects/Lead/fields/Call_Campaign_State__c.field-meta.xml
<CustomField>
    <fullName>Call_Campaign_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains the last CCS.</description>
    <label>Call Campaign State</label>
    <referenceTo>telegenta__Call_Campaign_State__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>