force-app/main/default/objects/Lead/fields/Callable_Within_1_Hour__c.field-meta.xml
<CustomField>
    <fullName>Callable_Within_1_Hour__c</fullName>
    <formula>ISBLANK(telegenta__Lock_Time__c) || 
(telegenta__Lock_Time__c &lt;= NOW()) || 
(telegenta__Lock_Time__c - NOW() &lt;= (1/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Callable Within 1 Hour</label>
    <type>Checkbox</type>
</CustomField>