force-app/main/default/objects/Lead/fields/Callable_Within_2_Hours__c.field-meta.xml
<CustomField>
    <fullName>Callable_Within_2_Hours__c</fullName>
    <formula>ISBLANK(telegenta__Lock_Time__c) || 
(telegenta__Lock_Time__c &lt;= NOW()) || 
(telegenta__Lock_Time__c - NOW() &lt;= (2/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Callable Within 2 Hours</label>
    <type>Checkbox</type>
</CustomField>