force-app/main/default/objects/Lead/fields/Calls_Since_Last_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Calls_Since_Last_Reopen__c</fullName>
    <label>Calls Since Last Reopen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>