force-app/main/default/objects/Lead/fields/Campaign_Flow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Flow_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a Lead is created with this field being &quot;true&quot; or is updated to this field being &quot;true&quot;, it will trigger the campaign flow and create a matching campaign member, based on Related Event ID</description>
    <inlineHelpText>If a Lead is created with this field being &quot;true&quot; or is updated to this field being &quot;true&quot;, it will trigger the campaign flow and create a matching campaign member, based on Related Event ID</inlineHelpText>
    <label>Campaign Flow Trigger</label>
    <type>Checkbox</type>
</CustomField>