force-app/main/default/objects/Lead/fields/Can_be_Called__c.field-meta.xml
<CustomField>
    <fullName>Can_be_Called__c</fullName>
    <formula>IF(Locked__c  = true, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can be Called</label>
    <type>Checkbox</type>
</CustomField>