force-app/main/default/objects/Lead/fields/Cancel_Reschedule_LocationChange_Event__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reschedule_LocationChange_Event__c</fullName>
    <label>Cancel/Reschedule/LocationChange Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>