force-app/main/default/objects/Lead/fields/Cancelled_tickets__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_tickets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancelled tickets</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>