force-app/main/default/objects/Lead/fields/Case_closed__c.field-meta.xml
<CustomField>
    <fullName>Case_closed__c</fullName>
    <label>Case closed</label>
    <type>Date</type>
</CustomField>