force-app/main/default/objects/Lead/fields/Children_over_18__c.field-meta.xml
<CustomField>
    <fullName>Children_over_18__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Er alle børn over 18</label>
    <type>Checkbox</type>
</CustomField>