force-app/main/default/objects/Lead/fields/Children_type__c.field-meta.xml
<CustomField>
    <fullName>Children_type__c</fullName>
    <label>Type børn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fælles børn</fullName>
            </value>
            <value>
                <fullName>Sammenbragte børn</fullName>
            </value>
            <value>
                <fullName>Begge dele</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>