force-app/main/default/objects/Lead/fields/Civil_status__c.field-meta.xml
<CustomField>
    <fullName>Civil_status__c</fullName>
    <label>Civilstatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Enlig</fullName>
            </value>
            <value>
                <fullName>Samlevende</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>