force-app/main/default/objects/Lead/fields/Closed_Not_Converted_Status__c.field-meta.xml
<CustomField>
    <fullName>Closed_Not_Converted_Status__c</fullName>
    <label>Closed Not Converted Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>