force-app/main/default/objects/Lead/fields/Communication_Ban__c.field-meta.xml
<CustomField>
    <fullName>Communication_Ban__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication Ban</label>
    <referenceTo>Communication_Ban__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>