force-app/main/default/objects/Lead/fields/Company_Lecture__c.field-meta.xml
<CustomField>
    <fullName>Company_Lecture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Lecture</label>
    <type>Checkbox</type>
</CustomField>