force-app/main/default/objects/Lead/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aktieselskab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>