force-app/main/default/objects/Lead/fields/Consider_testament__c.field-meta.xml
<CustomField>
    <fullName>Consider_testament__c</fullName>
    <label>Har overvejet et testamente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ja, jeg har overvejet det</fullName>
            </value>
            <value>
                <fullName>Nej, men jeg vil gerne have mere information</fullName>
            </value>
            <value>
                <fullName>Ja, Jeg har allerede et testamente</fullName>
            </value>
            <value>
                <fullName>Nej, men måske mangler jeg viden</fullName>
            </value>
            <value>
                <fullName>;</fullName>
            </value>
            <value>
                <fullName>Ja;Nej</fullName>
            </value>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nej</fullName>
            </value>
            <value>
                <fullName>Nej, ikke før nu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>